changed structure, added twcdn, and fixed spacing

--- a/style.css
+++ b/style.css
@@ -76,7 +76,3 @@ footer {
 	display: flex;
 	justify-content: center;
 }
-
-.mw {
-	max-width: 800px;
-}
